# magnus

./: Cargo.toml
examples/rust_yaml/: Rakefile  ruby_large_profile.txt  ruby_small_profile.txt  rust_large_profile.txt  rust_small_profile.txt
examples/rust_yaml/bench/: benchmark.rb  profile.rb
examples/rust_yaml/ext/rust_yaml/: Cargo.toml  extconf.rb
examples/rust_yaml/ext/rust_yaml/src/: lib.rs
examples/rust_yaml/lib/: rust_yaml.rb
examples/rust_yaml/test/: blank_test.rb
